--- a/templates/base.html
+++ b/templates/base.html
@@ -15,6 +15,8 @@
 
 </head>
 <body >
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9743795237904983"
+     crossorigin="anonymous"></script>
 
     <div class="container py-3">
 {%block body%} # jinja
@@ -41,6 +43,11 @@ integrity="sha384-G/EV+4j2dNv+tEPo3++6LCgdCROaejBqfUeNjuKAiuXbjrxilcCdDz6ZAVfHWe
     Este software se distribuye bajo licencia libre para uso personal y comercial sin restricciones.
   </small>
 </footer>
+
+
+
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9743795237904983"
+     crossorigin="anonymous"></script>
 
 </body>
 
