--- a/templates/resumen.html
+++ b/templates/resumen.html
@@ -49,7 +49,7 @@
       <tr>
         <td>Costo material</td>
         <td>${{ item.calculos.costo_material }}</td>
-        <td><small>({{ item.datos_entrada.metros_pieza }}m / {{ item.datos_entrada.metros_bobina }}m) × ${{ item.datos_entrada.valor_rollo }}</small></td>
+        <td><small>(${{ item.datos_entrada.valor_rollo }} / {{ item.datos_entrada.metros_bobina }}m) × {{ item.datos_entrada.metros_pieza }}m</small></td>
       </tr>
       <tr>
         <td>Costo laboral</td>
