--- a/templates/resumen.html
+++ b/templates/resumen.html
@@ -100,6 +100,10 @@
         <th>Ganancia ({{ item.datos_entrada.porcentaje_ganancia }}%):</th>
         <td>${{ item.ganancia }}</td>
       </tr>
+      <tr>
+        <th>Mantenimiento (30%):</th>
+        <td>${{ item.mantenimiento }}</td>
+      </tr>
       <tr class="table-primary">
         <th>Precio final:</th>
         <td><strong>${{ item.precio_final }}</strong></td>
